--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
     "chai": "^3.5.0",
     "chakram": "^1.2.2",
     "find-free-port": "^1.0.2",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^1.1.1",
+    "gulp-istanbul": "^0.10.3",
+    "gulp-mocha": "^2.1.3",
+    "isparta": "^4.0.0",
     "mocha": "^2.4.5"
   }
 }
