--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "juttle-service",
   "version": "0.1.0",
   "description": "API-based execution engine for juttle programs",
-  "main": "bin/juttle-service",
+  "main": "lib/juttle-service",
   "bin": {
     "juttle-service": "bin/juttle-service",
     "juttle-service-client": "bin/juttle-service-client"
