--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "minimist": "^1.2.0",
     "moment": "^2.11.1",
     "request-promise": "^2.0.0",
+    "sprintf-js": "^1.0.3",
     "underscore": "^1.8.3",
     "uuid": "^2.0.1",
     "ws": "^0.4.31"
