Add cors headers to all requests
Primarily these came out of development hassles and trying to run
juttle-viewer/juttle-client-library (from a different port) against
juttle-service. Ultimately, I think (at least by default) juttle-service
should allow requests from all browser clients.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bluebird": "^3.2.1",
     "body-parser": "^1.14.2",
     "compression": "^1.6.1",
+    "cors": "^2.7.1",
     "daemon": "^1.1.0",
     "double-ended-queue": "^0.9.7",
     "express": "^4.13.4",
