--- a/.eslintrc
+++ b/.eslintrc
@@ -5,10 +5,17 @@
         "es6": true
     },
     "rules": {
+        "no-new-object": [ 2 ],
+        "eqeqeq": [ 2 ],
+        "no-new-func": [ 2 ],
+        "no-new-wrappers": [ 2 ],
         "indent": [ 2, 4, { "SwitchCase": 1 } ],
         "linebreak-style": [ 2, "unix" ],
         "no-unused-vars": [2, { "args": "none" }],
-        "semi": [ 0 ],
-        "quotes": [ 2, "single" ]
-    }
+        "semi": [ 2, "always" ],
+        "comma-dangle": [ 0 ],
+        "no-constant-condition" : [ 0 ],
+        "quotes": [ 2, "single" ],
+        "strict": [ 2, "global" ]
+    },
 }
