--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index",
   "bin": {
     "juttle-service": "bin/juttle-service",
-    "juttle-service-client": "bin/juttle-service-client"
+    "juttle-service-client": "bin/juttle-service-client",
+    "juttle": "bin/juttle"
   },
   "directories": {
     "doc": "docs",
