--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.1.3",
     "isparta": "^4.0.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3"
   }
 }
