--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "juttle-service",
-  "version": "0.4.0-rc.0",
+  "version": "0.4.0",
   "description": "API-based execution engine for juttle programs",
   "main": "index",
   "bin": {
